--- a/Backend/Store_Pro/nexux/src/main/resources/application.properties
+++ b/Backend/Store_Pro/nexux/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=nexux
+spring.application.name=nexus
 server.port=8085
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/stk
@@ -6,18 +6,3 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
-
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-
-
-
-# email properties
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=rohinsuryapakula031@gmail.com
-spring.mail.password=bodoqcxlfnjhynkp
-#spring.mail.properties.mail.smtp.auth=true
-#spring.mail.properties.mail.smtp.starttls.enable=true
-
-
