forget password,configuration,otp

--- a/Backend/Store_Pro/nexux/src/main/resources/application.properties
+++ b/Backend/Store_Pro/nexux/src/main/resources/application.properties
@@ -8,3 +8,12 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 
  
+
+# Mail properties
+spring.mail.host=smtp.example.com
+spring.mail.port=587
+spring.mail.username= shaikkhairunnisa99@gmail.com
+spring.mail.password=Khairun@123
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.debug=true
